--- a/scss/styles4.scss
+++ b/scss/styles4.scss
@@ -461,10 +461,11 @@ display: inline;
         align-items: center;
     }
     .Nelo5{
+        padding-left: 100px;
             transition: all 1s;
-            max-width: 1080px;
+            max-width: 730px;
         &:hover{
-            max-width: 1100px;
+            max-width: 750px;
         }
         .TextoT{
             
