--- a/css/styles4.css
+++ b/css/styles4.css
@@ -207,6 +207,7 @@ h1 {
   /*  */
   /* ----------------------------------------------------------------------------------------------------Galeria */
   .imagenes {
+    padding-left: 10px;
     display: flex;
     align-items: center;
     flex-direction: column; }
@@ -384,6 +385,7 @@ h1 {
     width: 360px;
     height: 209px; }
   .imagenes {
+    padding-left: 35px;
     display: flex;
     flex-direction: column; }
   .imagenes img {
